# rye

./: README.md  pyproject.toml  requirements.txt
src/: stock_app.py
