[project]
name = "rye"
version = "0.1.0"
description = "お試し"
authors = [
    { name = "spyderhero", email = "sample@example.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "ruff>=0.3.4",
    "pandas>=2.2.1",
    "tqdm>=4.66.2",
    "streamlit>=1.32.2",
    "yfinance>=0.2.37",
    "altair>=5.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye"]

[tool.rye.scripts]
start = { cmd = "streamlit run ./src/stock_app.py" }